--- a/41-45/44-05.html
+++ b/41-45/44-05.html
@@ -16,16 +16,16 @@
       // todos 리소스에서 새로운 todo를 생성
       xhr.open("POST", "/todos");
 
-      //
+      // 요청 몸체에 담아 서버로 전송할 페이로드의 MIME 타입을 지정
       xhr.setRequestHeader("content-type", "application/json");
 
       // HTTP 요청 전송
-      //
+      // 새로운 todo를 생성하기 위해 페이로드를 서버에 전송해야 한다.
       xhr.send(JSON.stringify({ id: 4, content: "Angular", completed: false }));
 
       // load 이벤트는 요청이 성공적으로 완료된 경우 발생한다.
       xhr.onload = () => {
-        // status 프로퍼티 값이 200이면 정상적으로 응답된 상태다.
+        // status 프로퍼티 값이 200(OK) 또는 201(Created)이면 정상적으로 응답된 상태다.
         if (xhr.status === 200 || xhr.status === 201) {
           document.querySelector("pre").textContent = xhr.response;
         } else {
